# UB_EnrollEase

./: .env  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
Classes/: CMakeLists.txt  main.cpp
Classes/.cache/clangd/index/: Action.cpp.9AB46CAB849EFD68.idx  Action.h.E0D72805AE080A47.idx  Administrator.cpp.360A5CFEFD9CC847.idx  Administrator.h.DE3DF99C09BE5579.idx  Authentication.cpp.6CD7CC2D968F1D93.idx  Authentication.h.024C14CC8DA08908.idx  CMakeCXXCompilerId.cpp.347B5D4880F59BA8.idx  Courses.cpp.8FED3C2465217943.idx  Courses.h.995228D949E72C18.idx  Department.cpp.FFD0BCAA6105DE94.idx  Department.h.6775C1B0BB334AB9.idx  Enrollment.cpp.02575A5FE937A997.idx  Enrollment.h.1844703B21EA560E.idx  Professor.cpp.BDF82F01B889B0C1.idx  Professor.h.70F5793B6DD0859B.idx  Student.cpp.349174A7A381CAD5.idx  Student.h.5D2E6926C6DC4CD6.idx  SystemManager.cpp.FB8A938D2C45DE23.idx  SystemManager.h.58CD0A3053EA4201.idx  User.cpp.9AB7E924FAF4F4F4.idx  User.h.8AF6D22339FB1684.idx  main.cpp.63D98BC31C6ACDF0.idx  main.cpp.FD7C32CD08EEDCB4.idx
Classes/EnrollEase/: Action.cpp  Action.h  Administrator.cpp  Administrator.h  Authentication.cpp  Authentication.h  CourseOffering.cpp  CourseOffering.h  Courses.cpp  Courses.h  Department.cpp  Department.h  Enrollment.cpp  Enrollment.h  Professor.cpp  Professor.h  Semester.cpp  Semester.h  Student.cpp  Student.h  SystemManager.cpp  SystemManager.h  User.cpp  User.h  enrollEase  main.cpp
src/: .gitignore  app.ts  server.ts
src/config/: db.ts
src/controllers/: CourseController.ts  adminController.ts  authController.ts  (+2 more)
(+77 files in other folders)
